Some items like Chaos Orb reduce instability. If any other item would do this, it'd be an item like the chaos orb that has a chance to make the item worse. (you're encouraged to risk it)
-Now the why. Because it adds SCARCITY. And this will be the theme of more of my mods (if i can get some good ideas). Basically, to ensure BIS (Best in Slot) items are very hard to get.
And to stop the gameplay of farming currencies at endgame to just reroll your existing items into perfection.

* STAT GROWTH FORMULA CHANGES! now instead of stats being x * level. They are in a different formula that makes them grow slower at low lvls (lvl 2 mobs are no longer 2 times stronger than lvl 1) but a lvl 100 mob is now MUCH stronger than a lvl 90.
(this will likely lead to bugs! Beware of weirdness in stats and battle)

* COMBAT OVERHAUL! 
there is no longer many dmg numbers for every element you do, it's all combined into 1 now.
i changed internal code of it, could be buggy
swords now work like vanilla ones and do aoe

Other more minor changes:
reduced droprates a bit (config change, i feel there's a bit too much drops cus i kept adding more and more types of loot)
added bonus droprate for loot of lvl 5 and less if player is also lvl 5 or less
fixed a bug that made all adventure maps have double droprate
reduced repair values of materials by a bit
nerfed instant heal % hp value, buffed base value
fixed weakness making weapons unusable (will still happen on some compatible weapons i assume)
removed config for instant attack speed.
reduced player hp regen at lvl 1
default non mod dmg is now 0. Should prevent weirdness like lvl 1 players able to kill lvl 100 mobs. (was 3% before)
added durability to jewerly and spells
made rarities rarer (finding mythics will be much harder now, use currencies wisely)
items drop with less current durability now
reduce durability items spawn in at higher lvls but increases at lower lvls