@@ -14,9 +14,9 @@ mod_description=Turn Minecraft into a Hack and Slash Looter!
 mod_icon=logo.png
 
 # Forge / Minecraft
-version_forge=1.14.4-28.0.73
+version_forge=1.14.4-28.0.82
 version_minecraft=1.14.4
-version_mcp=20190829-1.14.3
+version_mcp=20190901-1.14.3
 
 # Mod Dependencies
 version_curios=FORGE-1.14.4-0.24
