@@ -1,5 +1,7 @@
 package com.robertx22.mine_and_slash.uncommon.interfaces;
 
-public interface IGearItem {
+import com.robertx22.mine_and_slash.items.gearitems.bases.MyForgeItem;
+
+public interface IGearItem extends MyForgeItem {
     // just a marking interface so lang file can sort gear items into 1 category
 }
