@@ -15,6 +15,11 @@ there is no longer many dmg numbers for every element you do, it's all combined 
 i changed internal code of it, could be buggy
 swords now work like vanilla ones and do aoe
 
+* New Config: REPAIR RESTRICTION
+This makes it so items from my mod can only be repaired with other items from my mod. This also goes with the scarcity in mind ideal of the update but i will keep it off by default-
+because i think too many people would be asking why their mending enchant doesn't work or why they can't repair their gear with x method.
+I made it cus too many mods add OP repair options and that makes any kind of balance impossible without days of tweaking and disabling items/features of other mods.
+
 Other more minor changes:
 reduced droprates a bit (config change, i feel there's a bit too much drops cus i kept adding more and more types of loot)
 added bonus droprate for loot of lvl 5 and less if player is also lvl 5 or less
